<resources>
    <string name="app_name">Ultimate Account Manager</string>
    <string name="player_image_desc">Player Image</string>
    <string name="player_featured">Imagem Referente ao Player em Destaque</string>
    <string name="str_sign_in">SIGN IN</string>
    <string name="str_login_desc">In the best\'s ot servers you have been played</string>
    <string name="str_username">Username</string>
    <string name="str_password">Password</string>
    <string name="str_dont_have_acc">Don\'t Have an Account? Sign Up</string>
    <string name="acoount_details_profile_photo">Acoount details profile photo</string>
</resources>
