<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    tools:context=".ui.login.LoginFragment"
    android:theme="@style/AppTheme.NoActionBar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"

            >

            <TextView
                android:id="@+id/txt_login_logo_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/press_start"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimaryText"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_login_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:fontFamily="@font/odibee_sans"
                android:text="@string/str_sign_in"
                android:textColor="@color/colorPrimaryText"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="@+id/txt_login_logo_name"
                app:layout_constraintStart_toStartOf="@+id/txt_login_logo_name"
                app:layout_constraintTop_toBottomOf="@+id/txt_login_logo_name" />

            <TextView
                android:id="@+id/txt_login_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/odibee_sans"
                android:text="@string/str_login_desc"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/txt_login_sign_in"
                app:layout_constraintStart_toStartOf="@+id/txt_login_sign_in"
                app:layout_constraintTop_toBottomOf="@+id/txt_login_sign_in" />

            <EditText
                android:id="@+id/edt_login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:background="@drawable/edit_text_top"
                android:hint="@string/str_username"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/txt_login_desc"
                app:layout_constraintStart_toStartOf="@+id/txt_login_desc"
                app:layout_constraintTop_toBottomOf="@+id/txt_login_desc" />

            <EditText
                android:id="@+id/edt_login_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_bottom"
                android:hint="@string/str_password"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:padding="15dp"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/edt_login_username"
                app:layout_constraintStart_toStartOf="@+id/edt_login_username"
                app:layout_constraintTop_toBottomOf="@+id/edt_login_username" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:backgroundTint="@color/colorSecondaryLight"
                android:fontFamily="@font/odibee_sans"
                android:text="@string/str_sign_in"
                android:padding="11dp"
                android:textAllCaps="false"
                android:textColor="@color/colorSecondaryText"
                android:textSize="22sp"

                app:layout_constraintEnd_toEndOf="@+id/edt_login_pass"
                app:layout_constraintStart_toStartOf="@+id/edt_login_pass"
                app:layout_constraintTop_toBottomOf="@+id/edt_login_pass" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <ProgressBar
        android:id="@+id/loginProgressBar"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent"
        android:padding="150dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-261dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
